Correction Functioning align Desktop

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -92,7 +92,7 @@
 }
 @media screen and (min-width: 1024px) {
   .functioning {
-    justify-content: space-around;
+    justify-content: space-between;
   }
 }
 .functioning a {
